# cashflow

./: .gitignore  Makefile  pyrightconfig.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/auth/: dependencies.py  email.py  models.py  router.py  schemas.py  security.py  service.py
backend/app/core/: config.py  database.py
backend/app/imports/: matching.py  models.py  router.py  schemas.py  service.py
backend/app/journal/: router.py  schemas.py  service.py
backend/app/partners/: conflict_utils.py  delete_utils.py  models.py  router.py  schemas.py  service.py
backend/app/review/: router.py  schemas.py  service.py
backend/app/scripts/: backfill_booking_references.py  cleanup_false_duplicates_unmapped.py  seed.py
backend/app/services/: models.py  router.py  schemas.py  service.py
backend/app/tenants/: models.py  router.py  schemas.py  service.py
backend/app/testing/: router.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_auth_tables.py  002_add_user_invitations.py  003_add_accounts_and_mappings.py  004_add_partners.py  005_add_audit_log.py  006_add_import_pipeline.py  007_add_review_items.py  008_add_review_resolution_fields.py  009_add_column_assignments.py  010_add_partner_accounts.py  011_add_bic_fields.py  012_drop_narrow_dedup_index.py  013_add_account_excluded_identifiers.py  014_add_partner_display_name.py  015_audit_log_nullable_mandant.py  016_add_service_management.py  (+9 more)
backend/scripts/: check_duplicates.py  migrate_webwerk_split.py
(+233 files in other folders)
