[project]
name = "cashflow-backend"
version = "0.1.0"
description = "CashFlow Core – Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "bcrypt<4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",  # in-memory SQLite for tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP"]
ignore = ["E712"]  # SQLAlchemy boolean comparisons use == True/False

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.2",
]
